--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <title>Propper - Architecture & Real Estate Onepage Landing page HTML Template</title>
+    <title>Propper - Architecture & Real Estate Pictures and Videos Enhancer</title>
 
 </head>
 
